# cmd/docs/swagger.json
@@ -106,9 +106,9 @@
                 }
             }
         },
-        "/product/create": {
-            "post": {
-                "description": "Adds a new product to the system",
+        "/products": {
+            "get": {
+                "description": "Get All Products",
                 "consumes": [
                     "application/json"
                 ],
@@ -118,21 +118,10 @@
                 "tags": [
                     "Products"
                 ],
-                "summary": "Create a new product",
-                "parameters": [
-                    {
-                        "description": "Product data",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ProductCreateDTO"
-                        }
-                    }
-                ],
+                "summary": "Get All products",
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.SuccessResponse"
                         }
@@ -152,9 +141,9 @@
                 }
             }
         },
-        "/products": {
-            "get": {
-                "description": "Get All Products",
+        "/products/create": {
+            "post": {
+                "description": "Adds a new product to the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -164,10 +153,21 @@
                 "tags": [
                     "Products"
                 ],
-                "summary": "Get All products",
+                "summary": "Create a new product",
+                "parameters": [
+                    {
+                        "description": "Product data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ProductDTO"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/dto.SuccessResponse"
                         }
@@ -220,7 +220,7 @@
                 }
             }
         },
-        "dto.ProductCreateDTO": {
+        "dto.ProductDTO": {
             "type": "object",
             "required": [
                 "description",
